--- a/src/styles/educ.css
+++ b/src/styles/educ.css
@@ -2,7 +2,7 @@
    EDUCATION PAGE - CONTAINER
    ============================================ */
 #edu-container {
-  padding: 2rem 20rem 2rem 6rem;
+  padding: 4rem 4rem 2rem 4rem;
 }
 
 /* ============================================
@@ -14,6 +14,7 @@
 
 #uni-logo {
   margin-bottom: 1rem;
+  border-radius: 1rem;
 }
 
 #uni {
