--- a/src/styles/music.css
+++ b/src/styles/music.css
@@ -1,7 +1,7 @@
 /* ============================================
-   MUSIC PLAYER - MAIN CONTAINER
+   BOTTOM BAR - MAIN CONTAINER
    ============================================ */
-#music-section {
+.bottom-ctn {
   background-color: transparent;
   position: absolute;
   bottom: 0;
@@ -9,8 +9,17 @@
   width: 100%;
   height: 5.3rem;
   display: flex;
+  padding: 0.2rem 0.9rem 0.9rem 0.9rem;
+}
+
+/* ============================================
+   MUSIC PLAYER - MAIN CONTAINER
+   ============================================ */
+#music-section {
+  display: flex;
   justify-content: space-between;
   align-self: center;
+  width: 100%;
   padding: 0.2rem 0.9rem 0.9rem 0.9rem;
 }
 
@@ -52,15 +61,20 @@
   display: flex;
   flex-direction: column;
   margin-left: 1rem;
+  max-width: 124px;
 }
 
 .music-title {
   font-size: 0.9rem;
+  margin-top: 0;
+  margin-bottom: 4px;
 }
 
 .music-artist {
   font-size: 0.8rem;
+  font-weight: 550;
   color: grey;
+  margin-top: 0;
 }
 
 /* ============================================
