--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -23,7 +23,8 @@
 }
 
 .projects {
-  background-color: var(--pale-slate-2);
+  border-top: 3px solid var(--charcoal);
+  background-color: var(--sand);
 }
 
 /* ============================================
@@ -35,6 +36,7 @@
   flex-direction: column;
   margin: 0 auto;
   max-width: 1200px;
+  padding: 2rem;
   font-family: 'Inter', ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
@@ -77,8 +79,8 @@
 .proj-card {
   margin: 1rem;
   padding: 2rem;
-  min-height: 400px;
-  width: 400px;
+  min-height: 200px;
+  width: 360px;
   border: 1px solid rgba(255, 255, 255, 0.05);
   border-radius: 12px;
   background-color: var(--sand);
@@ -91,7 +93,7 @@
 }
 
 .proj-img {
-  width: 400px;
+  width: 100%;
   height: 200px;
   object-fit: cover;
   border-radius: 12px;
@@ -194,13 +196,14 @@
   align-items: center;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 2rem;
+  background-color: orange;
 }
 
 .grid-row-toggle::after {
   content: "";
   position: absolute;
   width: 1px;
-  height: 100%;
+  height: 2px;
   background: rgba(0, 0, 0, 0.1);
   left: 50%;
   transform: translateX(-50%);
