--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -9,6 +9,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Lustria&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap');
 @import "tailwindcss";
 
 /* ============================================
@@ -133,7 +134,8 @@ a:hover {
    ============================================ */
 .wrapper {
   background-color: var(--sand);
-  overflow-y: scroll;
+  overflow: scroll;
+  overflow: overlay;  
   overflow-x: hidden;
   height: calc(100dvh - 4.5rem - 5.5rem);
   border-radius: 1rem;
@@ -161,12 +163,14 @@ a:hover {
 ::-webkit-scrollbar {
   width: 10px;
   border-radius: 1rem;
-  background-color: transparent;
+  background-color: var(--sand);
+  display: none;
 }
 
 ::-webkit-scrollbar-thumb {
   background-color: rgba(255, 255, 255, 0.2);
   border-radius: 0;
+   scrollbar-width: none; 
 }
 
 .page-container::-webkit-scrollbar {
@@ -187,7 +191,7 @@ a:hover {
 }
 
 .scrollable-content::-webkit-scrollbar-thumb {
-  background-color: rgba(255, 255, 255, 0.2);
+  background-color: rgba(222, 203, 174, 0.27);
   border-radius: 0;
 }
 
@@ -236,3 +240,4 @@ a:hover {
 .text-xxs {
   font-size: 0.75rem;
 }
+
