--- a/src/styles.css
+++ b/src/styles.css
@@ -35,7 +35,7 @@
 
   /* Palette Colors */
   --green: #a1ff9a;
-  --matte-black: #2D2B2A;
+  --matte-black: #21201f;
   --lavender: #DAD8F0ff;
   --lavender-2: #D7D5EFff;
   --charcoal: #595959ff;
