--- a/src/components/media/media.module.css
+++ b/src/components/media/media.module.css
@@ -4,6 +4,8 @@
 .musicCard {
   display: flex;
   flex-direction: column;
+  position: absolute;
+  bottom: 0;
   width: 100%;
   padding: 1rem;
   background-color: var(--sand); /* Blends with sidebar */
